cfn_benchmark/cfn_templates/nautiyaldeepak__Cloudformation-Template/CloudWatch/InstanceLogsCloudWatch.yaml
---

# This Template uses Amazon Linux AMI

Description: >
  Write EC2 Instance Logs to CloudWatch

Parameters:
  InstanceType:
    Description: Select Instance Type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.large
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.xlarge
      - m3.2xlarge
      - c1.medium
      - c1.xlarge
  OperatingSystem:
    Description: Select Operating System (Linux)
    Type: String
    Default: AmazonLinux
    AllowedValues:
      - AmazonLinux
      - AmazonLinux2
      - CentOS
      - RHEL7
      - RHEL6
  InstanceName:
    Description: Name of the Instance
    Type: String
  KeyName:
    Description: Key Pair to ssh into Instance
    Type: AWS::EC2::KeyPair::KeyName
  MyVPC:
    Description: Select VPC
    Type: AWS::EC2::VPC::Id
  IamRole:
    Description: Role Name
    Type: String
    Default: cloudwatch

Mappings:
  RegionMap:
    us-east-1:
      amazonLinux: "ami-14c5486b"
      regionCode: us-east-1
    us-east-2:
      amazonLinux: "ami-922914f7"
      regionCode: us-east-2
    ap-south-1:
      amazonLinux: "ami-76d6f519"
      regionCode: ap-south-1
    ap-northeast-1:
      amazonLinux: "ami-92df37ed"
      regionCode: ap-northeast-1

Resources:
  CloudWatchInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
      - {Ref: IamRole}
  LinuxInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", amazonLinux]
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref CloudWatchInstanceProfile
      SecurityGroupIds:
        - Ref: MySecurityGroupIngress
        - Ref: MySecurityGroupEgress
      UserData:
        Fn::Base64:
          Fn::Join:
          - "\n"
          - - "#!/bin/bash -v"
            - "sudo yum install awslogs -y"
            - "wget /etc/awslogs/awscli.conf https://github.com/nautiyaldeepak/Cloudformation-Template/blob/master/CloudWatch/config.json"
            - "sudo service awslogs start"
      Tags:
        -
          Key: Name
          Value: !Ref InstanceName
  MySecurityGroupEgress:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Test Security group (Egress)"
      VpcId: !Ref MyVPC
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: 0.0.0.0/0
      Tags:
        -
          Key: "Name"
          Value: "EgressSecurity"
  MySecurityGroupIngress:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Test Security Group (Ingress)"
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: 0.0.0.0/0
      Tags:
        -
          Key: "Name"
          Value: "IngressSecurity"
